# Driving-Training

./: README.md  pyproject.toml  script.py
Driving-Controller-App/: App.tsx  app.json  package-lock.json  package.json  tsconfig.json
Driving-Controller-App/Screens/: ServerConnection.tsx  SteeringWheel.tsx
Driving-Controller-App/app/: _layout.tsx  index.tsx
Driving-Controller-App/app/Screens/: Scanner.tsx  ServerConnection.tsx  SteeringWheel.tsx
Driving-Server/: Server.py
